--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,14 @@
 	</script>
 	<link rel="manifest" href="/manifest.json" />
 	<div id="root"></div>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150741023-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-150741023-1');
+</script>
 	<!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
